--- a/views/bookList.ejs
+++ b/views/bookList.ejs
@@ -53,7 +53,7 @@
                 <p id="notes" class="notesDisplay otherInfo"><%= books[i].bookNotes %></p><br class="notesDisplay otherInfo">
                 <i class="quoteOneDisplay otherInfo">"</i> <i class="quoteOneDisplay otherInfo"><%= books[i].quoteOne %></i> <i class="quoteOneDisplay otherInfo">"</i><br class="quoteOneDisplay otherInfo">
                 <i class="quoteTwoDisplay otherInfo">"</i> <i class="quoteTwoDisplay otherInfo"><%= books[i].quoteTwo %></i> <i class="quoteTwoDisplay otherInfo">"</i><br class="quoteTwoDisplay otherInfo">
-                <i class="quoteThreeDisplay otherInfo">"</i> <i class="quoteTwoDisplay otherInfo"><%= books[i].quoteThree %></i> <i class="quoteTwoDisplay otherInfo">"</i><br class="quoteTwoDisplay otherInfo">         
+                <i class="quoteThreeDisplay otherInfo">"</i> <i class="quoteThreeDisplay otherInfo"><%= books[i].quoteThree %></i> <i class="quoteThreeDisplay otherInfo">"</i><br class="quoteThreeDisplay otherInfo">         
                 <span class="startDateDisplay otherInfo">Started: </span><span class="startDateDisplay otherInfo"><%= books[i].startDate %></span><br class="startDateDisplay otherInfo">
                 <span class="endDateDisplay otherInfo">Finished: </span><span class="endDateDisplay otherInfo"><%= books[i].finishDate %></span><br class="endDateDisplay otherInfo">
 
