--- a/views/bookList.ejs
+++ b/views/bookList.ejs
@@ -48,12 +48,12 @@
         <% for (let i=0; i<books.length; i++) {%>
             <li class="bookListClass">
                 <h3 class="bookTitle"><%= books[i].title %></h3>
-                <p><%= books[i].author %></p>
+                <p class="bookAuthor"><%= books[i].author %></p>
                 <span class="ratingDisplay">Rating: </span><span class="ratingDisplay"><%= books[i].bookRating %></span><br class="otherInfo ratingDisplay">
-                <p id="notes" class="notesDisplay otherInfo"><%= books[i].bookNotes %></p><br class="notesDisplay otherInfo">
-                <i class="quoteOneDisplay otherInfo">"</i> <i class="quoteOneDisplay otherInfo"><%= books[i].quoteOne %></i> <i class="quoteOneDisplay otherInfo">"</i><br class="quoteOneDisplay otherInfo">
-                <i class="quoteTwoDisplay otherInfo">"</i> <i class="quoteTwoDisplay otherInfo"><%= books[i].quoteTwo %></i> <i class="quoteTwoDisplay otherInfo">"</i><br class="quoteTwoDisplay otherInfo">
-                <i class="quoteThreeDisplay otherInfo">"</i> <i class="quoteThreeDisplay otherInfo"><%= books[i].quoteThree %></i> <i class="quoteThreeDisplay otherInfo">"</i><br class="quoteThreeDisplay otherInfo">         
+                <p id="notes" class="notesDisplay otherInfo"><%= books[i].bookNotes %></p><br class="notesDisplayBR notesDisplay otherInfo">
+                <i class="quoteDisplay otherInfo">"</i> <i class="quoteDisplay otherInfo"><%= books[i].quoteOne %></i> <i class="quoteDisplay otherInfo">"</i><br class="quoteDisplayBROne quoteDisplay otherInfo">
+                <i class="quoteDisplay otherInfo">"</i> <i class="quoteDisplay otherInfo"><%= books[i].quoteTwo %></i> <i class="quoteDisplay otherInfo">"</i><br class="quoteDisplayBRTwo quoteDisplay otherInfo">
+                <i class="quoteDisplay otherInfo">"</i> <i class="quoteDisplay otherInfo"><%= books[i].quoteThree %></i> <i class="quoteDisplay otherInfo">"</i><br class="quoteDisplayBRThree quoteDisplay otherInfo">        
                 <span class="startDateDisplay otherInfo">Started: </span><span class="startDateDisplay otherInfo"><%= books[i].startDate %></span><br class="startDateDisplay otherInfo">
                 <span class="endDateDisplay otherInfo">Finished: </span><span class="endDateDisplay otherInfo"><%= books[i].finishDate %></span><br class="endDateDisplay otherInfo">
 
