--- a/views/addBook.ejs
+++ b/views/addBook.ejs
@@ -43,7 +43,7 @@
         </script>
   
     <h3>Enter New Book</h3>
-    <form id="createNewBook" class="inputArea" action="/books" method="POST">
+    <form id="createNewBook" class="inputArea" action="/books" method="POST" style="margin-bottom: 5rem;">
         <label class="bigLabel" for="title">Book Title</label>
         <input type="text" placeholder="Name" name="title" required>
         <label class="bigLabel" for="author">Author</label required>
