--- a/views/addBook.ejs
+++ b/views/addBook.ejs
@@ -42,7 +42,7 @@
      });
         </script>
   
-    <h3>Enter New Book</h3>
+    <h3 id="enterBookTitle">Enter New Book</h3>
     <form id="createNewBook" class="inputArea" action="/books" method="POST" style="margin-bottom: 5rem;">
         <label class="bigLabel" for="title">Book Title</label>
         <input type="text" placeholder="Name" name="title" required>
