--- a/views/addBook.ejs
+++ b/views/addBook.ejs
@@ -7,12 +7,12 @@
     <meta http-equiv=“Content-Security-Policy” content="default-src ‘self’; ">
     <title>Booki</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-
     <header>
         <nav id="mainnav" class="group">
-            <div id="bookiLogoMobile">Booki</div>
+            <div id="bookiLogoMobile"><a href="/">Booki</a></div>
             <div id="menu">&#x2261;</div>
             <h1><a id="bookiLogo" href="/">Booki</a></h1>
             <ul>
@@ -21,26 +21,7 @@
                 <li><a href="addNewBook">Add Book</a></li>
             </ul>
         </nav>
-          </header>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
-        </script>
-        <script>
-            $(document).ready(function() {
-	   
-       // JQUERY NAV TOGGLE
-       $('#menu').bind('click',function(event){
-           $('#mainnav ul').slideToggle();
-       });
- 
-       $(window).resize(function(){  
-           var w = $(window).width();  
-           if(w > 768) {  
-               $('#mainnav ul').removeAttr('style');  
-           }  
-       });
-         
-     });
-        </script>
+    </header>
   
     <h3 id="enterBookTitle">Enter New Book</h3>
     <form id="createNewBook" class="inputArea" action="/books" method="POST" style="margin-bottom: 5rem;">
@@ -62,11 +43,11 @@
             <label for="finish-date">Finished</label>
             <input type="date" class="smallerInput" name="finishDate" min="2000-01-01" max="2025-01-01">
             <label for="bookRating">Rating</label>
-            <input type="text" class="smallerInput" placeholder="Rating" name="bookRating">
+            <input type="text" class="smallerInput" placeholder="3.5/5" name="bookRating">
         </section>
         <button type="submit">Submit</button>
     </form>
-
-    <script src="/main.js"></script>
+    
+<script src="/main.js"></script>
 </body>
 </html>
