--- a/views/bookList.ejs
+++ b/views/bookList.ejs
@@ -7,12 +7,12 @@
     <meta http-equiv=“Content-Security-Policy” content="default-src ‘self’; ">
     <title>Booki</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-
     <header>
         <nav id="mainnav" class="group">
-            <div id="bookiLogoMobile">Booki</div>
+            <div id="bookiLogoMobile"><a href="/">Booki</a></div>
             <div id="menu">&#x2261;</div>
             <h1><a id="bookiLogo" href="/">Booki</a></h1>
             <ul>
@@ -21,26 +21,7 @@
                 <li><a href="addNewBook">Add Book</a></li>
             </ul>
         </nav>
-          </header>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
-        </script>
-        <script>
-            $(document).ready(function() {
-	   
-       // JQUERY NAV TOGGLE
-       $('#menu').bind('click',function(event){
-           $('#mainnav ul').slideToggle();
-       });
- 
-       $(window).resize(function(){  
-           var w = $(window).width();  
-           if(w > 768) {  
-               $('#mainnav ul').removeAttr('style');  
-           }  
-       });
-         
-     });
-        </script>
+    </header>
 
     <div id="space"></div>
 
@@ -92,6 +73,6 @@
         </form>
     </section>
 
-    <script src="/main.js"></script>
+<script src="/main.js"></script>
 </body>
 </html>
