--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-
     <header>
         <nav id="mainnav" class="group">
-            <div id="bookiLogoMobile">Booki</div>
+            <div id="bookiLogoMobile"><a href="/">Booki</a></div>
             <div id="menu">&#x2261;</div>
             <h1><a id="bookiLogo" href="/">Booki</a></h1>
             <ul>
@@ -23,132 +22,41 @@
                 <li><a href="addNewBook">Add Book</a></li>
             </ul>
         </nav>
-          </header>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
-        </script>
-        <script>
-            $(document).ready(function() {
-	   
-       // JQUERY NAV TOGGLE
-       $('#menu').bind('click',function(event){
-           $('#mainnav ul').slideToggle();
-       });
- 
-       $(window).resize(function(){  
-           var w = $(window).width();  
-           if(w > 768) {  
-               $('#mainnav ul').removeAttr('style');  
-           }  
-       });
-         
-     });
-        </script>
+    </header>
 
-<main id="home-main">
-
-<section id="home-section">
-    <div>
-        <h1>Read Books</h1>
-        <h4>in style</h4>
-        <p>Get started on archiving all of your great reads.</p>
-    </div>
-    <div id="quote-machine-container">
-        <div id="quote-machine">
-            <div id="quote-area">
-                <i id="leftQuote" class="fas fa-quote-left"></i>
-                    <p class="fade-in" id="quoteSpace"></p>
-                <i id="rightQuote" class="fas fa-quote-right"></i>
+    <main id="home-main">
+        <section id="home-section">
+            <div>
+                <h1>Read Books</h1>
+                <h4>in style</h4>
+                <p>Get started on archiving all of your great reads.</p>
             </div>
-            <p class="fade-in delayed" id="titleSpace"></p>
+            <div id="quote-machine-container">
+                <div id="quote-machine">
+                    <div id="quote-area">
+                        <i id="leftQuote" class="fas fa-quote-left"></i>
+                            <p class="fade-in" id="quoteSpace"></p>
+                        <i id="rightQuote" class="fas fa-quote-right"></i>
+                    </div>
+                    <p class="fade-in delayed" id="titleSpace"></p>
+                </div>
+            </div>
+        </section>
+        <div id='quotesList'>
+            <ul id="storeQuotes">
+            <% for (let i=0; i<books.length; i++) {%>
+                <li>
+                <p class="title"><%= books[i].title %></p>
+                <p class="author"><%= books[i].author %></p>
+                <p class="quote"><%= books[i].quoteOne %></p>
+                <p class="quote"><%= books[i].quoteTwo %></p>
+                <p class="quote"><%= books[i].quoteThree %></p>
+                </li>
+            <% } %>
+             </ul>
         </div>
-    </div>
-    
-</section>
-
-
-<div id='quotesList'>
-    <ul id="storeQuotes">
-    <% for (let i=0; i<books.length; i++) {%>
-        <li>
-        <p class="title"><%= books[i].title %></p>
-        <p class="author"><%= books[i].author %></p>
-        <p class="quote"><%= books[i].quoteOne %></p>
-        <p class="quote"><%= books[i].quoteTwo %></p>
-        <p class="quote"><%= books[i].quoteThree %></p>
-        </li>
-    <% } %>
-</ul>
-</div>
+    </main>
 <script src="/main.js"></script>
-
-<script>
-let qList = document.querySelector("#storeQuotes")
-
-let totalQuotes = qList.childElementCount
-
-if (totalQuotes <= 0) {
-    document.querySelector("#quoteSpace").innerHTML = "No saved books, get to adding!"
-    document.querySelector("#quoteSpace").style.opacity = "1"
-} 
-
-let quotesObj = new Object;
-let q=1
-
- for (let i=1; i<= totalQuotes * 2 -1; i+= 2) {
-     if (qList.childNodes[i].childNodes[5].innerText) {
-        quotesObj[`key`+q] = {
-            title: qList.childNodes[i].childNodes[1].innerText,
-            author: qList.childNodes[i].childNodes[3].innerText,
-            quote1: qList.childNodes[i].childNodes[5].innerText,
-        }
-        if (qList.childNodes[i].childNodes[7].innerText) {
-        quotesObj[`key`+q].quote2 = qList.childNodes[i].childNodes[7].innerText
-        }
-        if (qList.childNodes[i].childNodes[9].innerText) {
-        quotesObj[`key`+q].quote3 = qList.childNodes[i].childNodes[9].innerText
-        }
-     } else {
-         q--
-     }
-        q++
-    } 
-
-    let objSize = Object.keys(quotesObj).length;
-    let titleSpace = document.querySelector("#titleSpace")
-
-        window.onload = newQuoteFunc;
-    
-        function newQuoteFunc () {
-            let randomNumKeys = Math.ceil(Math.random()*objSize)
-            let randomNumKeyQuote = quotesObj[`key`+randomNumKeys]
-            let randomNumKeyQuoteLength = Object.keys(randomNumKeyQuote).length - 2;
-            let thisIsTheQuote = randomNumKeyQuote[`quote`+ Math.ceil(Math.random() * randomNumKeyQuoteLength)]
-
-            quoteSpace.innerHTML = thisIsTheQuote;
-            titleSpace.innerHTML = randomNumKeyQuote.title + ' by ' + randomNumKeyQuote.author
-
-            $(quoteSpace).animate({ opacity: 0 }, 0, function () {
-                $(this).animate({ opacity: 1 }, 1000);
-            });
-
-            $(leftQuote).animate({ opacity: 0 }, 0, function () {
-                $(this).animate({ opacity: 1 }, 1000);
-            });
-
-            $(rightQuote).animate({ opacity: 0 }, 0, function () {
-                $(this).animate({ opacity: 1 }, 1000);
-            });
-
-            $(titleSpace).animate({ opacity: 0 }, 0, function () {
-                setTimeout(() => {
-                    $(this).animate({ opacity: 1 }, 1000);
-                }, 1000)
-            });
-        }
-            window.setInterval(newQuoteFunc, 5000)
-    
-</script>
-</main>
-</body>
+<script src="/index.js"></script>
 </body>
 </html>
